--- a/APM-Start/src/app/shared/star.component.html
+++ b/APM-Start/src/app/shared/star.component.html
@@ -1,6 +1,7 @@
 <div class="crop"
-     [style.width.px]="cropWidth"
-     [title]="rating">
+     [style.width.px]="50"
+     [title]="rating"
+     (click)="showStar()">
   <div style="width: 75px">
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
